--- a/fabcar/views/home.ejs
+++ b/fabcar/views/home.ejs
@@ -59,7 +59,8 @@
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
-<% var user=["User ID", "Name User", "Date Of Birth", "Sex User", "Address User"] %>
+<% var user=["Address User", "Date Of Birth", "User Name", "Sex User", "User ID"] %>
+<% var user_inf=["address_user", "date_of_brith", "name_user", "sex_user", "user_id"] %>
 
 <body>
     <div class="container">
@@ -71,29 +72,52 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="search-box">
-                    <form class="search-form" action="#">
-                        <input class="form-control" placeholder="Nhap UserID" type="text">
+                    <form class="search-form" action="http://localhost:4200/home">
+                        <input class="form-control" placeholder="Nhap UserID" type="text" name="userid">
                         <button class="btn btn-link search-btn">
                             <i class="glyphicon glyphicon-search"></i>
                         </button>
                     </form> 
                 </div>
             </div>
+            
         </div>
         <div class="information" style="margin-top: 100px">
             <form>
                 <% for(var i=0; i<5; i++) { %>
                     <div class="form-group row">
-                        <label for="staticEmail" class="col-sm-2 col-form-label"><% user[i] %></label>
+                        <label for="staticEmail" class="col-sm-2 col-form-label"><%= user[i] %></label>
                         <div class="col-sm-10">
-                          <p>Nguyen Ba Hung</p>
+                                <% if (locals.hung) { %>
+                                    <p><%= (Object.values(hung))[i]%></p>
+                                <% } %>
+                         
                         </div>
                       </div>
-                <% } %>
-
-           
-                
+                <% } %>       
               </form>
+        </div>
+        <div class="row">
+            <div class=".col-md-3 .col-md-offset-3">
+                <form action="/home" method="get">
+                    <input type="hidden" name="userid" value="<%= hung.user_id %>" />
+                    <select name="class">
+                        <option selected>Choose</option>
+                        <option value=10>Class 10</option>
+                        <option value=11>Class 11</option>
+                        <option value=12>Class 12</option>
+                    </select>
+                    
+                    <input type="submit" value="Filter" />
+                </form>
+            </div>
+        </div>
+
+        <div class="show_score">
+                <% if (locals.classid) { %>
+                    <p>  <%- JSON.stringify(classid) %> </p>
+                <% } %>
+           
         </div>
     </div>
 </body>
